test/must_fail/api/must_fail_file_write_args.ngjs
#!/usr/bin/env ngspicejs
// two string args needed
// linter: ngspicejs-lint
"use strict";

file_write('asdf');
